         It means the schema support MySQL 5.5.3 or above.
- [BUG FIX] The Definition File editor worked. It should not do at the initial situation. We should make it sure.
- [BUG FIX] Fix retrieving field data when using FileMaker Server and only one field is placed on the layout.
  The affected version is 4.6 only (Thanks to Kentaro Suzuki).

Ver.4.6 (2014/11/21)
- Query conditions, sort fields, record number and updating context can be described in data-im attributes.
  This feature realizes non-programming search page.
- In case of 'navi-control' is 'master-hide', the pagination control is going to hide when the detail area appears.
- The Date/Time functions are available in the expression of 'calculation' value.
- Add methods (addCondition, addSortKey, clearCondition, clearSortKey) to INTERMediator object.
- Use fmresultset XML grammer internally in getFromDB method of DB_FileMaker_FX class.
- Support syncing with multiple clients with Pusher using FileMaker datasource (except for portal=>true context).
- Add INTERMediator.totalRecordCount property and add getTotalCount() to DB_FileMaker_FX class to get the total 
  number of records in the main table.
- Update the "Practices" (search) in the "Samples" directory for the non-programming searching.
- Update Sample_products_auth (Authorized Media Handling Sample) for the master-detail style UI.
- Update the "Master/Detail" practice for the master-detail style UI.
- Add practices ("search", "Master/Detail" and "Input Only") for FileMaker Server in the "Practices" directory.
- Add "templates" directory in the "Samples" directory.
- [INFO] FileMaker Server 10 has been deprecated. In the near future, INTER-Mediator will require FileMaker Server 11 
  or later if using FileMaker Server.
- [INFO] Internet Explorer Ver.8 is going to an unsupported browser. On this version, the fundamental functions are
  working but the new ones after INTER-Mediator ver.4.3 are not fully working.