@@ -26,6 +26,7 @@ Ver.4.7 (in development)
 - [BUG FIX] The Definition File editor worked. It should not do at the initial situation. We should make it sure.
 - [BUG FIX] Fix retrieving field data when using FileMaker Server and only one field is placed on the layout.
   The affected version is 4.6 only (Thanks to Kentaro Suzuki).
+- [BUG FIX] Fix processing FileMaker's portal=>true context (Thanks to Kentaro Suzuki).
 
 Ver.4.6 (2014/11/21)
 - Query conditions, sort fields, record number and updating context can be described in data-im attributes.
